; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/fatten/fatfs/extr_diskio.c_disk_cleanup.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/fatten/fatfs/extr_diskio.c_disk_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@driveHandleCount = common dso_local global i64 0, align 8
@driveHandle = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @disk_cleanup(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @driveHandleCount, align 8
  %6 = icmp ult i64 %4, %5
  br i1 %6, label %7, label %23

7:                                                ; preds = %1
  %8 = load i32**, i32*** @driveHandle, align 8
  %9 = load i64, i64* %3, align 8
  %10 = getelementptr inbounds i32*, i32** %8, i64 %9
  %11 = load i32*, i32** %10, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %22

13:                                               ; preds = %7
  %14 = load i32**, i32*** @driveHandle, align 8
  %15 = load i64, i64* %3, align 8
  %16 = getelementptr inbounds i32*, i32** %14, i64 %15
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @fclose(i32* %17)
  %19 = load i32**, i32*** @driveHandle, align 8
  %20 = load i64, i64* %3, align 8
  %21 = getelementptr inbounds i32*, i32** %19, i64 %20
  store i32* null, i32** %21, align 8
  br label %22

22:                                               ; preds = %13, %7
  br label %23

23:                                               ; preds = %22, %1
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
